--- a/tools/gen_ascii/main.html
+++ b/tools/gen_ascii/main.html
@@ -5,9 +5,6 @@
     <link href="style.css" rel="stylesheet">
     <title>gen ascii</title>
 
-    <!--<style media="screen">-->
-    <!---->
-    <!--</style>-->
 </head>
 
 <body>
@@ -80,7 +77,7 @@
         result.innerHTML = num // asciiTxt[colNum]
     }
 
-
+    // 每个字符 4 个字节
     const __main = () => {
         let asciiTxt = ['00000000', '00000000', '00000000', '00000000']
 
